test(ddd-kitchenpos): refactor OrderServiceTest