@@ -5,7 +5,6 @@ import static org.junit.jupiter.params.provider.Arguments.*;
 import static org.mockito.Mockito.*;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.NoSuchElementException;
@@ -27,7 +26,6 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import fixture.MenuFixture;
 import fixture.OrderFixture;
 import kitchenpos.domain.Menu;
 import kitchenpos.domain.MenuRepository;
@@ -35,7 +33,6 @@ import kitchenpos.domain.Order;
 import kitchenpos.domain.OrderLineItem;
 import kitchenpos.domain.OrderRepository;
 import kitchenpos.domain.OrderStatus;
-import kitchenpos.domain.OrderTable;
 import kitchenpos.domain.OrderTableRepository;
 import kitchenpos.domain.OrderType;
 import kitchenpos.infra.KitchenridersClient;
@@ -57,38 +54,20 @@ class OrderServiceTest {
 	@InjectMocks
 	private OrderService orderService;
 
-	private Menu validMenu;
-
-	private Order validOrder;
-
-	private OrderTable validOrderTable;
-
-	@BeforeEach
-	void setUp() {
-		validMenu = MenuFixture.createValid();
-		validOrder = OrderFixture.createValidOrder(validMenu);
-		validOrderTable = validOrder.getOrderTable();
-
-		lenient().when(menuRepository.findById(validMenu.getId())).thenReturn(Optional.of(validMenu));
-		lenient().when(menuRepository.findAllByIdIn(List.of(validMenu.getId()))).thenReturn(List.of(validMenu));
-		lenient().when(orderTableRepository.findById(validOrder.getOrderTableId()))
-			.thenReturn(Optional.of(validOrderTable));
-		lenient().when(orderRepository.findById(validOrder.getId())).thenReturn(Optional.of(validOrder));
-	}
-
 	@Nested
 	class create {
 		@Test
 		@DisplayName("주문 생성 시 주문 타입이 null이면 주문 생성을 할 수 없다")
 		void createOrderWithNullType() {
 			// given
-			validOrder.setType(null);
+			Order nullTypedOrder = OrderFixture.createValid();
+			nullTypedOrder.setType(null);
 
 			// then
 			assertThatExceptionOfType(IllegalArgumentException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.create(validOrder);
+					orderService.create(nullTypedOrder);
 				});
 		}
 
@@ -97,13 +76,14 @@ class OrderServiceTest {
 		@DisplayName("주문 생성 시 주문 항목이 null이거나 비어있으면 주문 생성을 할 수 없다")
 		void createOrderWithNullOrEmptyLineItems(List<OrderLineItem> lineItems) {
 			// given
-			validOrder.setOrderLineItems(lineItems);
+			Order orderWithNullOrEmptyOrderLineItems = OrderFixture.createValid();
+			orderWithNullOrEmptyOrderLineItems.setOrderLineItems(lineItems);
 
 			// then
 			assertThatExceptionOfType(IllegalArgumentException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.create(validOrder);
+					orderService.create(orderWithNullOrEmptyOrderLineItems);
 				});
 		}
 
@@ -111,14 +91,20 @@ class OrderServiceTest {
 		@DisplayName("주문 생성 시 요청된 항목 수와 실제 메뉴 수가 일치하지 않으면 주문 생성을 할 수 없다")
 		void createOrderWithMismatchedMenusAndRequests() {
 			// given
-			validOrder.setOrderLineItems(Arrays.asList(new OrderLineItem(), new OrderLineItem()));
-			when(menuRepository.findAllByIdIn(any())).thenReturn(Collections.singletonList(validMenu));
+			Order orderWithNotMatchedOrderLineItems = OrderFixture.createValid();
+			OrderLineItem orderLineItem = orderWithNotMatchedOrderLineItems.getOrderLineItems().getFirst();
+
+			List<OrderLineItem> orderLineItems = List.of(orderLineItem, new OrderLineItem());
+			orderWithNotMatchedOrderLineItems.setOrderLineItems(orderLineItems);
+
+			when(menuRepository.findAllByIdIn(any()))
+				.thenReturn(Collections.singletonList(orderLineItem.getMenu()));
 
 			// then
 			assertThatExceptionOfType(IllegalArgumentException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.create(validOrder);
+					orderService.create(orderWithNotMatchedOrderLineItems);
 				});
 		}
 
@@ -126,15 +112,16 @@ class OrderServiceTest {
 		@DisplayName("주문 생성 시 요청된 항목의 수량이 음수이면 주문 생성을 할 수 없다")
 		void createOrderWithNegativeQuantity() {
 			// given
-			OrderLineItem item = new OrderLineItem();
-			item.setQuantity(-1);
-			validOrder.setOrderLineItems(Collections.singletonList(item));
+			Order orderWithInvalidOrderLineItem = OrderFixture.createValid();
+			OrderLineItem orderLineItemWithNegativeQuantity = orderWithInvalidOrderLineItem.getOrderLineItems()
+				.getFirst();
+			orderLineItemWithNegativeQuantity.setQuantity(-1);
 
 			// then
 			assertThatExceptionOfType(IllegalArgumentException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.create(validOrder);
+					orderService.create(orderWithInvalidOrderLineItem);
 				});
 		}
 
@@ -142,13 +129,18 @@ class OrderServiceTest {
 		@DisplayName("주문 생성 시 메뉴 ID에 해당하는 메뉴가 존재하지 않으면 주문 생성을 할 수 없다")
 		void createOrderWithNonExistentMenu() {
 			// given
-			when(menuRepository.findById(any())).thenReturn(Optional.empty());
+			Order orderWithNonExistentMenu = OrderFixture.createValid();
+			Menu nonExistentMenu = orderWithNonExistentMenu.getOrderLineItems().getFirst().getMenu();
+
+			when(menuRepository.findAllByIdIn(List.of(nonExistentMenu.getId()))).thenReturn(
+				Collections.singletonList(nonExistentMenu));
+			when(menuRepository.findById(nonExistentMenu.getId())).thenReturn(Optional.empty());
 
 			// then
 			assertThatExceptionOfType(NoSuchElementException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.create(validOrder);
+					orderService.create(orderWithNonExistentMenu);
 				});
 		}
 
@@ -156,13 +148,20 @@ class OrderServiceTest {
 		@DisplayName("주문 생성 시 메뉴가 표시되지 않았을 경우 주문 생성을 할 수 없다")
 		void createOrderWithHiddenMenu() {
 			// given
-			validMenu.setDisplayed(false);
+			Order orderWithNotDisplayedMenu = OrderFixture.createValid();
+			Menu notDisplayedMenu = orderWithNotDisplayedMenu.getOrderLineItems().getFirst().getMenu();
+			notDisplayedMenu.setDisplayed(false);
+
+			when(menuRepository.findAllByIdIn(List.of(notDisplayedMenu.getId())))
+				.thenReturn(Collections.singletonList(notDisplayedMenu));
+
+			when(menuRepository.findById(notDisplayedMenu.getId())).thenReturn(Optional.of(notDisplayedMenu));
 
 			// then
 			assertThatExceptionOfType(IllegalStateException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.create(validOrder);
+					orderService.create(orderWithNotDisplayedMenu);
 				});
 		}
 
@@ -170,13 +169,20 @@ class OrderServiceTest {
 		@DisplayName("주문 생성 시 요청된 가격과 메뉴의 가격이 다르면 주문 생성을 할 수 없다")
 		void createOrderWithMismatchedPrice() {
 			// given
-			validOrder.getOrderLineItems().get(0).setPrice(new BigDecimal("10.00"));
+			Order orderWithMismatchedPrice = OrderFixture.createValid();
+			Menu validMenu = orderWithMismatchedPrice.getOrderLineItems().getFirst().getMenu();
+			orderWithMismatchedPrice.getOrderLineItems().getFirst().setPrice(new BigDecimal("10.00"));
+
+			when(menuRepository.findAllByIdIn(List.of(validMenu.getId())))
+				.thenReturn(Collections.singletonList(validMenu));
+
+			when(menuRepository.findById(validMenu.getId())).thenReturn(Optional.of(validMenu));
 
 			// then
 			assertThatExceptionOfType(IllegalArgumentException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.create(validOrder);
+					orderService.create(orderWithMismatchedPrice);
 				});
 		}
 
@@ -185,14 +191,22 @@ class OrderServiceTest {
 		@DisplayName("배달 주문 생성 시 배달 주소가 null이거나 비어있으면 주문 생성을 할 수 없다")
 		void createDeliveryOrderWithNullOrEmptyAddress(String address) {
 			// given
-			validOrder.setType(OrderType.DELIVERY);
-			validOrder.setDeliveryAddress(address);
+			Order orderWithInvalidDeliveryAddress = OrderFixture.createValid();
+			orderWithInvalidDeliveryAddress.setType(OrderType.DELIVERY);
+			orderWithInvalidDeliveryAddress.setDeliveryAddress(address);
+
+			Menu validMenu = orderWithInvalidDeliveryAddress.getOrderLineItems().getFirst().getMenu();
+
+			when(menuRepository.findAllByIdIn(List.of(validMenu.getId())))
+				.thenReturn(Collections.singletonList(validMenu));
+
+			when(menuRepository.findById(validMenu.getId())).thenReturn(Optional.of(validMenu));
 
 			// then
 			assertThatExceptionOfType(IllegalArgumentException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.create(validOrder);
+					orderService.create(orderWithInvalidDeliveryAddress);
 				});
 		}
 
@@ -200,14 +214,22 @@ class OrderServiceTest {
 		@DisplayName("매장 내 식사 주문 생성 시 주문 테이블 ID에 해당하는 테이블이 존재하지 않으면 주문 생성을 할 수 없다")
 		void createEatInOrderWithNonExistentTable() {
 			// given
-			validOrder.setType(OrderType.EAT_IN);
+			Order orderWithNonExistentOrderTable = OrderFixture.createValid();
+			Menu validMenu = orderWithNonExistentOrderTable.getOrderLineItems().getFirst().getMenu();
+
+			when(menuRepository.findAllByIdIn(List.of(validMenu.getId())))
+				.thenReturn(Collections.singletonList(validMenu));
+
+			when(menuRepository.findById(validMenu.getId())).thenReturn(Optional.of(validMenu));
+
+			orderWithNonExistentOrderTable.setType(OrderType.EAT_IN);
 			when(orderTableRepository.findById(any())).thenReturn(Optional.empty());
 
 			// then
 			assertThatExceptionOfType(NoSuchElementException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.create(validOrder);
+					orderService.create(orderWithNonExistentOrderTable);
 				});
 		}
 
@@ -215,14 +237,25 @@ class OrderServiceTest {
 		@DisplayName("매장 내 식사 주문 생성 시 주문 테이블이 사용 중이 아니면 주문 생성을 할 수 없다")
 		void createEatInOrderWithNonOccupiedTable() {
 			// given
-			validOrder.setType(OrderType.EAT_IN);
-			validOrderTable.setOccupied(false);
+			Order orderWithNonExistentOrderTable = OrderFixture.createValid();
+			orderWithNonExistentOrderTable.setType(OrderType.EAT_IN);
+			orderWithNonExistentOrderTable.getOrderTable().setOccupied(false);
+
+			Menu validMenu = orderWithNonExistentOrderTable.getOrderLineItems().getFirst().getMenu();
+
+			when(menuRepository.findAllByIdIn(List.of(validMenu.getId())))
+				.thenReturn(Collections.singletonList(validMenu));
+
+			when(menuRepository.findById(validMenu.getId())).thenReturn(Optional.of(validMenu));
+
+			when(orderTableRepository.findById(orderWithNonExistentOrderTable.getOrderTableId())).thenReturn(
+				Optional.of(orderWithNonExistentOrderTable.getOrderTable()));
 
 			// then
 			assertThatExceptionOfType(IllegalStateException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.create(validOrder);
+					orderService.create(orderWithNonExistentOrderTable);
 				});
 		}
 
@@ -230,35 +263,48 @@ class OrderServiceTest {
 		@DisplayName("매장 내 식사 주문 생성 시 주문 테이블이 사용 중이면 주문 생성을 할 수 있다")
 		void createEatInOrderSuccessfully() {
 			// given
-			validOrder.setType(OrderType.EAT_IN);
-			validOrderTable.setOccupied(true);
+			Order orderWithOccupiedOrderTable = OrderFixture.createValid();
+			orderWithOccupiedOrderTable.setType(OrderType.EAT_IN);
+			orderWithOccupiedOrderTable.getOrderTable().setOccupied(true);
 
-			when(orderRepository.save(any(Order.class))).thenReturn(validOrder);
+			Menu validMenu = orderWithOccupiedOrderTable.getOrderLineItems().getFirst().getMenu();
+
+			when(menuRepository.findAllByIdIn(List.of(validMenu.getId())))
+				.thenReturn(Collections.singletonList(validMenu));
+
+			when(menuRepository.findById(validMenu.getId())).thenReturn(Optional.of(validMenu));
+
+			when(orderTableRepository.findById(orderWithOccupiedOrderTable.getOrderTableId())).thenReturn(
+				Optional.of(orderWithOccupiedOrderTable.getOrderTable()));
+
+			when(orderRepository.save(any(Order.class))).thenReturn(orderWithOccupiedOrderTable);
 
 			// when
-			Order result = orderService.create(validOrder);
+			Order result = orderService.create(orderWithOccupiedOrderTable);
 
 			// then
 			assertThat(result).isNotNull();
-			assertThat(result).isEqualTo(validOrder);
-			assertThat(result.getOrderTable()).isEqualTo(validOrder.getOrderTable());
+			assertThat(result).isEqualTo(orderWithOccupiedOrderTable);
+			assertThat(result.getOrderTable()).isEqualTo(orderWithOccupiedOrderTable.getOrderTable());
 		}
 
 	}
 
+	@Nested
 	class accept {
 		@Test
 		@DisplayName("주문 수락 시 주문 ID에 해당하는 주문이 존재하지 않으면 주문 수락을 할 수 없다")
 		void acceptNonExistentOrder() {
 			// given
-			UUID orderId = UUID.randomUUID();
-			when(orderRepository.findById(orderId)).thenReturn(Optional.empty());
+			UUID nonExistentOrderId = UUID.randomUUID();
+
+			when(orderRepository.findById(nonExistentOrderId)).thenReturn(Optional.empty());
 
 			// then
 			assertThatExceptionOfType(NoSuchElementException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.accept(orderId);
+					orderService.accept(nonExistentOrderId);
 				});
 		}
 
@@ -266,15 +312,15 @@ class OrderServiceTest {
 		@DisplayName("주문 수락 시 주문 상태가 WAITING이 아니면 주문 수락을 할 수 없다")
 		void acceptNonWaitingOrder() {
 			// given
-			UUID orderId = UUID.randomUUID();
-			validOrder.setStatus(OrderStatus.ACCEPTED);
-			when(orderRepository.findById(orderId)).thenReturn(Optional.of(validOrder));
+			Order acceptedOrder = OrderFixture.createValid();
+			acceptedOrder.setStatus(OrderStatus.ACCEPTED);
+			when(orderRepository.findById(acceptedOrder.getId())).thenReturn(Optional.of(acceptedOrder));
 
 			// then
 			assertThatExceptionOfType(IllegalStateException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.accept(orderId);
+					orderService.accept(acceptedOrder.getId());
 				});
 		}
 
@@ -282,17 +328,17 @@ class OrderServiceTest {
 		@DisplayName("배달 주문 수락 시 주문 수락을 할 수 있다")
 		void acceptDeliveryOrder() {
 			// given
-			UUID orderId = UUID.randomUUID();
-			validOrder.setType(OrderType.DELIVERY);
-			validOrder.setStatus(OrderStatus.WAITING);
-			when(orderRepository.findById(orderId)).thenReturn(Optional.of(validOrder));
+			Order deliveryOrder = OrderFixture.createValid();
+			deliveryOrder.setType(OrderType.DELIVERY);
+			deliveryOrder.setStatus(OrderStatus.WAITING);
+			when(orderRepository.findById(deliveryOrder.getId())).thenReturn(Optional.of(deliveryOrder));
 
 			// when
-			Order acceptedOrder = orderService.accept(orderId);
+			Order acceptedOrder = orderService.accept(deliveryOrder.getId());
 
 			// then
-			verify(kitchenridersClient).requestDelivery(eq(orderId), any(BigDecimal.class),
-				eq(validOrder.getDeliveryAddress()));
+			verify(kitchenridersClient).requestDelivery(eq(deliveryOrder.getId()), any(BigDecimal.class),
+				eq(deliveryOrder.getDeliveryAddress()));
 			assertThat(acceptedOrder.getStatus()).isEqualTo(OrderStatus.ACCEPTED);
 		}
 	}
@@ -303,30 +349,32 @@ class OrderServiceTest {
 		@DisplayName("주문 서빙 시 주문 ID에 해당하는 주문이 존재하지 않으면 주문 서빙을 할 수 없다")
 		void serveNonExistentOrder() {
 			// given
-			UUID orderId = UUID.randomUUID();
-			when(orderRepository.findById(orderId)).thenReturn(Optional.empty());
+			UUID nonExistentOrderId = UUID.randomUUID();
+			when(orderRepository.findById(nonExistentOrderId)).thenReturn(Optional.empty());
 
 			// then
 			assertThatExceptionOfType(NoSuchElementException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.serve(orderId);
+					orderService.serve(nonExistentOrderId);
 				});
 		}
 
-		@Test
+		@ParameterizedTest
+		@EnumSource(value = OrderStatus.class, mode = EnumSource.Mode.EXCLUDE, names = {"ACCEPTED"})
 		@DisplayName("주문 서빙 시 주문 상태가 ACCEPTED가 아니면 주문 서빙을 할 수 없다")
-		void serveNonAcceptedOrder() {
+		void serveNonAcceptedOrder(OrderStatus orderStatus) {
 			// given
-			UUID orderId = UUID.randomUUID();
-			validOrder.setStatus(OrderStatus.WAITING);
-			when(orderRepository.findById(orderId)).thenReturn(Optional.of(validOrder));
+			Order nonAcceptedOrder = OrderFixture.createValid();
+			nonAcceptedOrder.setStatus(orderStatus);
+
+			when(orderRepository.findById(nonAcceptedOrder.getId())).thenReturn(Optional.of(nonAcceptedOrder));
 
 			// then
 			assertThatExceptionOfType(IllegalStateException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.serve(orderId);
+					orderService.serve(nonAcceptedOrder.getId());
 				});
 		}
 
@@ -334,12 +382,13 @@ class OrderServiceTest {
 		@DisplayName("주문 서빙 시 주문 상태가 ACCEPTED일 경우 주문 상태가 SERVED로 변경된다")
 		void serveAcceptedOrder() {
 			// given
-			UUID orderId = UUID.randomUUID();
-			validOrder.setStatus(OrderStatus.ACCEPTED);
-			when(orderRepository.findById(orderId)).thenReturn(Optional.of(validOrder));
+			Order acceptedOrder = OrderFixture.createValid();
+			acceptedOrder.setStatus(OrderStatus.ACCEPTED);
+
+			when(orderRepository.findById(acceptedOrder.getId())).thenReturn(Optional.of(acceptedOrder));
 
 			// when
-			Order servedOrder = orderService.serve(orderId);
+			Order servedOrder = orderService.serve(acceptedOrder.getId());
 
 			// then
 			assertThat(servedOrder.getStatus()).isEqualTo(OrderStatus.SERVED);
@@ -352,50 +401,50 @@ class OrderServiceTest {
 		@DisplayName("배달 시작 처리 시 주문 ID에 해당하는 주문이 존재하지 않으면 배달 시작 처리를 할 수 없다")
 		void startDeliveryNonExistentOrder() {
 			// given
-			UUID orderId = UUID.randomUUID();
-			when(orderRepository.findById(orderId)).thenReturn(Optional.empty());
+			UUID nonExistentOrderId = UUID.randomUUID();
+			when(orderRepository.findById(nonExistentOrderId)).thenReturn(Optional.empty());
 
 			// then
 			assertThatExceptionOfType(NoSuchElementException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.startDelivery(orderId);
+					orderService.startDelivery(nonExistentOrderId);
 				});
 		}
 
 		@ParameterizedTest
-		@EnumSource(value = OrderType.class, names = {"TAKEOUT", "EAT_IN"})
+		@EnumSource(value = OrderType.class, mode = EnumSource.Mode.EXCLUDE, names = {"DELIVERY"})
 		@DisplayName("배달 시작 처리 시 주문 타입이 배달이 아니면 배달 시작 처리를 할 수 없다")
-		void startDeliveryOnNonDeliveryOrder(OrderType orderType) {
+		void startDeliveryOnNonDeliveryOrder(OrderType nonDeliveryStatus) {
 			// given
-			UUID orderId = UUID.randomUUID();
-			validOrder.setType(orderType);
-			validOrder.setStatus(OrderStatus.SERVED);
-			when(orderRepository.findById(orderId)).thenReturn(Optional.of(validOrder));
+			Order nonDeliveryOrder = OrderFixture.createValidWithTypeAndStatus(nonDeliveryStatus, OrderStatus.SERVED);
+
+			when(orderRepository.findById(nonDeliveryOrder.getId())).thenReturn(Optional.of(nonDeliveryOrder));
 
 			// then
 			assertThatExceptionOfType(IllegalStateException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.startDelivery(orderId);
+					orderService.startDelivery(nonDeliveryOrder.getId());
 				});
 		}
 
 		@ParameterizedTest
 		@EnumSource(value = OrderStatus.class, mode = EnumSource.Mode.EXCLUDE, names = {"SERVED"})
 		@DisplayName("배달 시작 처리 시 주문 타입이 배달이고, 주문 상태가 SERVED가 아니면 배달 시작 처리를 할 수 없다")
-		void startDeliveryNotServedOrder(OrderStatus nonServedStatus) {
+		void startDeliveryNonServedOrder(OrderStatus nonServedStatus) {
 			// given
-			UUID orderId = UUID.randomUUID();
-			validOrder.setType(OrderType.DELIVERY);
-			validOrder.setStatus(nonServedStatus);
-			when(orderRepository.findById(orderId)).thenReturn(Optional.of(validOrder));
+			Order nonServedDeliveryOrder = OrderFixture.createValidWithTypeAndStatus(OrderType.DELIVERY,
+				nonServedStatus);
+
+			when(orderRepository.findById(nonServedDeliveryOrder.getId()))
+				.thenReturn(Optional.of(nonServedDeliveryOrder));
 
 			// then
 			assertThatExceptionOfType(IllegalStateException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.startDelivery(orderId);
+					orderService.startDelivery(nonServedDeliveryOrder.getId());
 				});
 		}
 
@@ -403,13 +452,13 @@ class OrderServiceTest {
 		@DisplayName("배달 시작 처리 시 주문 상태가 SERVED일 경우 주문 상태가 DELIVERING으로 변경된다")
 		void startDeliveryServedOrder() {
 			// given
-			UUID orderId = UUID.randomUUID();
-			validOrder.setType(OrderType.DELIVERY);
-			validOrder.setStatus(OrderStatus.SERVED);
-			when(orderRepository.findById(orderId)).thenReturn(Optional.of(validOrder));
+			Order servedDeliveryOrder = OrderFixture.createValidWithTypeAndStatus(OrderType.DELIVERY,
+				OrderStatus.SERVED);
+
+			when(orderRepository.findById(servedDeliveryOrder.getId())).thenReturn(Optional.of(servedDeliveryOrder));
 
 			// when
-			Order deliveringOrder = orderService.startDelivery(orderId);
+			Order deliveringOrder = orderService.startDelivery(servedDeliveryOrder.getId());
 
 			// then
 			assertThat(deliveringOrder.getStatus()).isEqualTo(OrderStatus.DELIVERING);
@@ -422,31 +471,32 @@ class OrderServiceTest {
 		@DisplayName("배달 완료 처리 시 주문 ID에 해당하는 주문이 존재하지 않으면 배달 완료 처리를 할 수 없다")
 		void completeDeliveryNonExistentOrder() {
 			// given
-			UUID orderId = UUID.randomUUID();
-			when(orderRepository.findById(orderId)).thenReturn(Optional.empty());
+			UUID nonExistentOrderId = UUID.randomUUID();
+
+			when(orderRepository.findById(nonExistentOrderId)).thenReturn(Optional.empty());
 
 			// then
 			assertThatExceptionOfType(NoSuchElementException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.completeDelivery(orderId);
+					orderService.completeDelivery(nonExistentOrderId);
 				});
 		}
 
 		@ParameterizedTest
-		@EnumSource(value = OrderStatus.class, names = {"WAITING", "ACCEPTED", "SERVED", "DELIVERED", "COMPLETED"})
+		@EnumSource(value = OrderStatus.class, mode = EnumSource.Mode.EXCLUDE, names = {"DELIVERING"})
 		@DisplayName("배달 완료 처리 시 주문 상태가 DELIVERING이 아니면 배달 완료 처리를 할 수 없다")
-		void completeDeliveryNotDeliveringOrder(OrderStatus orderStatus) {
+		void completeDeliveryNonDeliveringOrder(OrderStatus orderStatus) {
 			// given
-			UUID orderId = UUID.randomUUID();
-			validOrder.setStatus(orderStatus);
-			when(orderRepository.findById(orderId)).thenReturn(Optional.of(validOrder));
+			Order nonDeliveringOrder = OrderFixture.createValidWithTypeAndStatus(OrderType.DELIVERY, orderStatus);
+
+			when(orderRepository.findById(nonDeliveringOrder.getId())).thenReturn(Optional.of(nonDeliveringOrder));
 
 			// then
 			assertThatExceptionOfType(IllegalStateException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.completeDelivery(orderId);
+					orderService.completeDelivery(nonDeliveringOrder.getId());
 				});
 		}
 
@@ -454,12 +504,13 @@ class OrderServiceTest {
 		@DisplayName("배달 완료 처리 시 주문 상태가 DELIVERING일 경우 주문 상태가 DELIVERED로 변경된다")
 		void completeDeliveryDeliveringOrder() {
 			// given
-			UUID orderId = UUID.randomUUID();
-			validOrder.setStatus(OrderStatus.DELIVERING);
-			when(orderRepository.findById(orderId)).thenReturn(Optional.of(validOrder));
+			Order deliveringOrder = OrderFixture.createValidWithTypeAndStatus(OrderType.DELIVERY,
+				OrderStatus.DELIVERING);
+
+			when(orderRepository.findById(deliveringOrder.getId())).thenReturn(Optional.of(deliveringOrder));
 
 			// when
-			Order deliveredOrder = orderService.completeDelivery(orderId);
+			Order deliveredOrder = orderService.completeDelivery(deliveringOrder.getId());
 
 			// then
 			assertThat(deliveredOrder.getStatus()).isEqualTo(OrderStatus.DELIVERED);
@@ -467,6 +518,7 @@ class OrderServiceTest {
 
 	}
 
+	@Nested
 	class complete {
 		static Stream<Arguments> provideExceptionCasesForTakeOutAndEatInOrderTypes() {
 			return Stream.of(
@@ -487,31 +539,32 @@ class OrderServiceTest {
 		@DisplayName("주문 완료 처리 시 주문 ID에 해당하는 주문이 존재하지 않으면 주문 완료 처리를 할 수 없다")
 		void completeNonExistentOrder() {
 			// given
-			UUID orderId = UUID.randomUUID();
-			when(orderRepository.findById(orderId)).thenReturn(Optional.empty());
+			UUID nonExistentOrderId = UUID.randomUUID();
+
+			when(orderRepository.findById(nonExistentOrderId)).thenReturn(Optional.empty());
 
 			// then
 			assertThatExceptionOfType(NoSuchElementException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.complete(orderId);
+					orderService.complete(nonExistentOrderId);
 				});
 		}
 
-		@Test
+		@ParameterizedTest
+		@EnumSource(value = OrderStatus.class, mode = EnumSource.Mode.EXCLUDE, names = {"DELIVERED"})
 		@DisplayName("배달 주문 완료 처리 시 주문 상태가 DELIVERED가 아니면 주문 완료 처리를 할 수 없다")
-		void completeNonDeliveredOrder() {
+		void completeNonDeliveredOrder(OrderStatus nonDeliveredStatus) {
 			// given
-			UUID orderId = UUID.randomUUID();
-			validOrder.setType(OrderType.DELIVERY);
-			validOrder.setStatus(OrderStatus.DELIVERING);
-			when(orderRepository.findById(orderId)).thenReturn(Optional.of(validOrder));
+			Order nonDeliveredOrder = OrderFixture.createValidWithTypeAndStatus(OrderType.DELIVERY, nonDeliveredStatus);
+
+			when(orderRepository.findById(nonDeliveredOrder.getId())).thenReturn(Optional.of(nonDeliveredOrder));
 
 			// then
 			assertThatExceptionOfType(IllegalStateException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.complete(orderId);
+					orderService.complete(nonDeliveredOrder.getId());
 				});
 		}
 
@@ -519,13 +572,12 @@ class OrderServiceTest {
 		@DisplayName("배달 주문 완료 처리 시 주문 상태가 DELIVERED일 경우 주문 상태가 COMPLETED로 변경된다")
 		void completeDeliveredOrder() {
 			// given
-			UUID orderId = UUID.randomUUID();
-			validOrder.setType(OrderType.DELIVERY);
-			validOrder.setStatus(OrderStatus.DELIVERED);
-			when(orderRepository.findById(orderId)).thenReturn(Optional.of(validOrder));
+			Order deliveredOrder = OrderFixture.createValidWithTypeAndStatus(OrderType.DELIVERY, OrderStatus.DELIVERED);
+
+			when(orderRepository.findById(deliveredOrder.getId())).thenReturn(Optional.of(deliveredOrder));
 
 			// when
-			Order completedOrder = orderService.complete(orderId);
+			Order completedOrder = orderService.complete(deliveredOrder.getId());
 
 			// then
 			assertThat(completedOrder.getStatus()).isEqualTo(OrderStatus.COMPLETED);
@@ -536,16 +588,15 @@ class OrderServiceTest {
 		@DisplayName("포장 또는 매장 식사 주문 완료 처리 시 주문 상태가 SERVED가 아니면 주문 완료 처리를 할 수 없다")
 		void completeIfOrderNotServedOnCompletion(OrderType type, OrderStatus status) {
 			// given
-			UUID orderId = UUID.randomUUID();
-			validOrder.setType(type);
-			validOrder.setStatus(status);
-			when(orderRepository.findById(orderId)).thenReturn(Optional.of(validOrder));
+			Order invalidOrder = OrderFixture.createValidWithTypeAndStatus(type, status);
+
+			when(orderRepository.findById(invalidOrder.getId())).thenReturn(Optional.of(invalidOrder));
 
 			// then
 			assertThatExceptionOfType(IllegalStateException.class)
 				.isThrownBy(() -> {
 					// when
-					orderService.complete(orderId);
+					orderService.complete(invalidOrder.getId());
 				});
 		}
 
@@ -553,13 +604,12 @@ class OrderServiceTest {
 		@DisplayName("포장 주문 완료 처리 시 주문 상태가 SERVED일 경우 주문 상태가 COMPLETED로 변경된다")
 		void completeServedTakeoutOrder() {
 			// given
-			UUID orderId = UUID.randomUUID();
-			validOrder.setType(OrderType.TAKEOUT);
-			validOrder.setStatus(OrderStatus.SERVED);
-			when(orderRepository.findById(orderId)).thenReturn(Optional.of(validOrder));
+			Order servedTakeoutOrder = OrderFixture.createValidWithTypeAndStatus(OrderType.TAKEOUT, OrderStatus.SERVED);
+
+			when(orderRepository.findById(servedTakeoutOrder.getId())).thenReturn(Optional.of(servedTakeoutOrder));
 
 			// when
-			Order completedOrder = orderService.complete(orderId);
+			Order completedOrder = orderService.complete(servedTakeoutOrder.getId());
 
 			// then
 			assertThat(completedOrder.getStatus()).isEqualTo(OrderStatus.COMPLETED);
@@ -569,15 +619,18 @@ class OrderServiceTest {
 		@DisplayName("매장 식사 주문 완료 처리 시 주문 상태가 SERVED이고 해당 주문 테이블의 주문이 미완료 상태인 경우 주문 상태가 COMPLETED로 변경된다")
 		void completeServedEatInOrderWhenNotCompleted() {
 			// given
-			UUID orderId = UUID.randomUUID();
-			validOrder.setType(OrderType.EAT_IN);
-			validOrder.setStatus(OrderStatus.SERVED);
-			when(orderRepository.findById(orderId)).thenReturn(Optional.of(validOrder));
-			when(orderRepository.existsByOrderTableAndStatusNot(validOrderTable, OrderStatus.COMPLETED))
-				.thenReturn(true);
+			Order servedEatInOrderWithCompletedOrderTable = OrderFixture.createValidWithTypeAndStatus(OrderType.EAT_IN,
+				OrderStatus.SERVED);
+
+			when(orderRepository.findById(servedEatInOrderWithCompletedOrderTable.getId())).thenReturn(
+				Optional.of(servedEatInOrderWithCompletedOrderTable));
+			when(
+				orderRepository.existsByOrderTableAndStatusNot(servedEatInOrderWithCompletedOrderTable.getOrderTable(),
+					OrderStatus.COMPLETED)
+			).thenReturn(true);
 
 			// when
-			Order completedOrder = orderService.complete(orderId);
+			Order completedOrder = orderService.complete(servedEatInOrderWithCompletedOrderTable.getId());
 
 			// then
 			assertThat(completedOrder.getStatus()).isEqualTo(OrderStatus.COMPLETED);
@@ -587,21 +640,23 @@ class OrderServiceTest {
 		@DisplayName("매장 식사 주문 완료 처리 시 주문 상태가 SERVED이고 해당 주문 테이블의 주문이 완료 상태인 경우 테이블이 사용가능 상태로 변경된다")
 		void completeServedEatInOrderWithNoActiveTable() {
 			// given
-			UUID orderId = UUID.randomUUID();
-			validOrder.setType(OrderType.EAT_IN);
-			validOrder.setStatus(OrderStatus.SERVED);
+			Order servedEatInOrder = OrderFixture.createValidWithTypeAndStatus(
+				OrderType.EAT_IN, OrderStatus.SERVED);
 
-			when(orderRepository.findById(orderId)).thenReturn(Optional.of(validOrder));
-			when(orderRepository.existsByOrderTableAndStatusNot(validOrderTable, OrderStatus.COMPLETED)).thenReturn(
-				false);
+			when(orderRepository.findById(servedEatInOrder.getId()))
+				.thenReturn(Optional.of(servedEatInOrder));
+
+			when(
+				orderRepository.existsByOrderTableAndStatusNot(servedEatInOrder.getOrderTable(), OrderStatus.COMPLETED))
+				.thenReturn(false);
 
 			// when
-			Order completedOrder = orderService.complete(orderId);
+			Order completedOrder = orderService.complete(servedEatInOrder.getId());
 
 			// then
 			assertThat(completedOrder.getStatus()).isEqualTo(OrderStatus.COMPLETED);
-			assertThat(validOrderTable.getNumberOfGuests()).isZero();
-			assertThat(validOrderTable.isOccupied()).isFalse();
+			assertThat(servedEatInOrder.getOrderTable().getNumberOfGuests()).isZero();
+			assertThat(servedEatInOrder.getOrderTable().isOccupied()).isFalse();
 		}
 	}
 
@@ -624,14 +679,21 @@ class OrderServiceTest {
 		@DisplayName("주문 데이터가 비어있지 않을 때 모든 주문을 조회하면 주문 목록을 조회할 수 있다")
 		void findAllOrdersWhenNotEmpty() {
 			// given
-			when(orderRepository.findAll()).thenReturn(Collections.singletonList(validOrder));
+			Order validOrder = OrderFixture.createValidWithTypeAndStatus(
+				OrderType.DELIVERY, OrderStatus.WAITING);
+
+			Order anotherValidOrder = OrderFixture.createValidWithTypeAndStatus(
+				OrderType.EAT_IN, OrderStatus.SERVED);
+
+			when(orderRepository.findAll()).thenReturn(List.of(validOrder, anotherValidOrder));
 
 			// when
 			List<Order> orders = orderService.findAll();
 
 			// then
 			assertThat(orders).isNotEmpty();
-			assertThat(orders).contains(validOrder);
+			assertThat(orders.getFirst()).isEqualTo(validOrder);
+			assertThat(orders.getLast()).isEqualTo(anotherValidOrder);
 		}
 	}
 }
